# kna

./: .gitattributes  .gitignore  CODEBOOK.md  DATA_AVAILABILITY.md  DATA_COLLECTION_STRATEGY.md  DATA_OVERVIEW.md  MASTER_DATA_PLAN.md  NOMINATE_METHODOLOGY.md  README.md  build_multi_assembly.py  build_site.py  build_voteview.py  collect.py  collect_members.py  collect_roll_calls.py  consolidate_votes.py  estimate_dwnominate.R  estimate_idealpoints.R  extract_appendix_votes.py  integrate.py  link_external.py  parse_plenary_votes.py  pyproject.toml  tutorial.ipynb
data/processed/: assets_wealth_panel.parquet  bill_texts_linked.parquet  committee_meetings_18.parquet  committee_meetings_21.parquet  committee_meetings_22.parquet  cosponsorship_edges.parquet  dw_ideal_points_20_22.csv  hearing_meetings_summary.parquet  ideal_points_17.csv  ideal_points_20.csv  ideal_points_21.csv  ideal_points_22.csv  ideal_points_all.csv  judiciary_meetings_20.parquet  judiciary_meetings_21.parquet  judiciary_meetings_22.parquet  legislator_id_mapping.parquet  master_bills_17.parquet  master_bills_17_lite.parquet  master_bills_18.parquet  master_bills_18_lite.parquet  master_bills_19.parquet  master_bills_19_lite.parquet  master_bills_20.parquet  master_bills_20_lite.parquet  master_bills_21.parquet  master_bills_21_lite.parquet  master_bills_22.parquet  master_bills_22.sqlite  members_17.parquet  members_18.parquet  members_19.parquet  members_20.parquet  members_21.parquet  members_22.parquet  roll_calls_all.parquet
data/raw/: BILLINFODETAIL_17.parquet  BILLINFODETAIL_18.parquet  BILLINFODETAIL_19.parquet  BILLINFODETAIL_20.parquet  BILLINFODETAIL_21.parquet  BILLINFODETAIL_22.parquet  BILLJUDGECONF_17.parquet  BILLJUDGECONF_19.parquet  BILLJUDGECONF_20.parquet  BILLJUDGECONF_22.parquet  BILLJUDGE_22.parquet  BILLLWJUDGECONF_17.parquet  BILLLWJUDGECONF_18.parquet  BILLLWJUDGECONF_19.parquet  BILLLWJUDGECONF_22.parquet  BILLRCP_22.parquet  appendix_votes_17.parquet  appendix_votes_18.parquet  appendix_votes_19.parquet  ncocpgfiaoituanbr_20.parquet  ncocpgfiaoituanbr_21.parquet  ncocpgfiaoituanbr_22.parquet  nzmimeepazxkubdpn_22.parquet  nzpltgfqabtcpsmai_17.parquet  nzpltgfqabtcpsmai_18.parquet  nzpltgfqabtcpsmai_19.parquet  nzpltgfqabtcpsmai_20.parquet  nzpltgfqabtcpsmai_21.parquet  nzpltgfqabtcpsmai_22.parquet  phase1_meta_22.json  plenary_votes_16.parquet  plenary_votes_16_19.parquet  plenary_votes_17.parquet  roll_calls_20.parquet  roll_calls_21.parquet  (+1 more)
docs/: index.html  voteview.html
kbl/: __init__.py  cli.py  data.py  formatters.py  queries.py
kna/: __init__.py  cli.py  data.py  formatters.py  queries.py
site/: index.html
