[project]
name = "korean-bill-lifecycle"
version = "0.1.0"
description = "CLI for the Korean National Assembly bill lifecycle database"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Kyusik Yang", email = "kyusik.yang@nyu.edu" }]
keywords = ["korean", "national-assembly", "legislative", "bills", "nominate"]

dependencies = [
    "click>=8.0",
    "pandas>=1.5",
    "pyarrow>=10.0",
    "rich>=12.0",
]

[project.optional-dependencies]
mcp = ["mcp[cli]>=1.13.0"]

[project.scripts]
kbl = "kbl.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["kbl"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
