[project]
name = "korean-national-assembly"
version = "0.2.0"
description = "Comprehensive CLI for the Korean National Assembly: bills, lifecycle, votes, ideal points, and bill texts"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Kyusik Yang", email = "kyusik.yang@nyu.edu" }]
keywords = ["korean", "national-assembly", "legislative", "bills", "nominate", "dw-nominate"]

dependencies = [
    "click>=8.0",
    "pandas>=1.5",
    "pyarrow>=10.0",
    "rich>=12.0",
]

[project.optional-dependencies]
mcp = ["mcp[cli]>=1.13.0"]

[project.scripts]
kna = "kna.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["kna"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
