[project]
name = "kna"
version = "0.3.1"
description = "Comprehensive CLI for the Korean National Assembly: bills, lifecycle, votes, ideal points, and bill texts"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Kyusik Yang", email = "kyusik.yang@nyu.edu" }]
keywords = ["korean", "national-assembly", "legislative", "bills", "nominate", "dw-nominate", "korea", "parliament"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "click>=8.0",
    "pandas>=1.5",
    "pyarrow>=10.0",
    "rich>=12.0",
]

[project.urls]
Homepage = "https://github.com/kyusik-yang/kna"
Documentation = "https://kyusik-yang.github.io/assembly-tutorial/"
Explorer = "https://kyusik-yang.github.io/kna/"
Issues = "https://github.com/kyusik-yang/kna/issues"

[project.scripts]
kna = "kna.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["kna"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
